# Boid

./: CMakeLists.txt  Makefile
include/: IDisplay.hpp  IGraphique.hpp  ISimulator.hpp  bird.hpp  birdFactory.hpp  boid.hpp  cpu2d.hpp  sfml.hpp  vec2.hpp
src/: boid.cpp  main.cpp
src/graphic/: sfml.cpp
src/sfml/: sfml.cpp
src/simulate/: cpu2d.cpp
